# ggwave

examples/: CMakeLists.txt
examples/ggwave-from-pipe/: CMakeLists.txt  main.cpp
examples/ggwave-pipe/: CMakeLists.txt  README.md  main.cpp
examples/ggwave-to-pipe/: CMakeLists.txt  main.cpp
include/ggwave/: ggwave.h
src/: ggwave.cpp
